feat(dump): added dump name uniqueness per bucket (#24)
* feat(dump): added dump name uniqueness per bucket

* refactor(dump): removed the status property from the custom http error classes
